--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.datasource.password=123456
 #[opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
 spring.jpa.show-sql = true
 
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
