--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,10 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Url donde esta el servicio de tu mysql y el nombre de la base de datos
-spring.datasource.url=jdbc:mysql://localhost:3306/pedidos
+spring.datasource.url=jdbc:mysql://192.168.1.83:3306/pedidos
 
 #Usuario y contrasena para tu base de datos descrita en la linea anterior
-spring.datasource.username=root
+spring.datasource.username=gerald
 spring.datasource.password=123456
 
 #[opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
